<package format="2">
  <name>gazebo_vegetation</name>
  <version>0.1.0</version>
  <description>
  Package with Gazebo vegetation models.
  </description>
  <maintainer email="jakub@tomasek.fr">Jakub Tomasek</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
